[tool.poetry]
package-mode = false
name = "brainstormer"
version = "0.1.0"
description = "Generates relevant noun phrases based on any input using a bing search"
authors = ["Leon L"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-Levenshtein = ">=0.26,<1.0"
Flask = "^3.0"
waitress = "^3.0"
nltk = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

